--- a/src/app/favorite/favorite.component.html
+++ b/src/app/favorite/favorite.component.html
@@ -1,1 +1,6 @@
-<span class="glyphicon-search">Star</span>
+<span 
+class="glyphicon"
+[class.glyphicon-star]="isSelected"
+[class.glyphicon-star-empty]="!isSelected"
+(click)="onClick()"
+>glyphicon(no longer supported in this version of bootstrap)</span>
