--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,3 @@
 <h1>Hello Isaac</h1> <br>
 <button (click)="onClick()">Save</button> <br>
-<favorite [isFavorite]="post.isFavorite" (change)="onFavoriteChanged()"></favorite>
+<favorite [isFavorite]="post.isFavorite" (change)="onFavoriteChanged($event)"></favorite>
