--- a/src/app/favorite/favorite.component.html
+++ b/src/app/favorite/favorite.component.html
@@ -4,7 +4,9 @@ class="glyphicon"
 [class.glyphicon-star-empty]="!isSelected"
 (click)="onClick()"
 >glyphicon(no longer supported in this version of bootstrap)</span> -->
-
+<style>
+    
+</style>
 <button type="button" class="btn btn-primary" 
 [class.btn-primary]="isSelected"
 [class.btn-secondary]="!isSelected"
