--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,11 @@
 <h1>Hello Isaac</h1> <br>
 <button (click)="onClick()">Save</button> <br>
 <favorite [isFavorite]="post.isFavorite" (change)="onFavoriteChanged($event)"></favorite>
+<bootstrap-panel>
+    <div class="heading">Heading</div>
+    <div class="body">
+
+        <h2>Body</h2>
+        <p>Some content here..</p>
+    </div>
+</bootstrap-panel>
