--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,7 +2,7 @@
 <button (click)="onClick()">Save</button> <br>
 <favorite [isFavorite]="post.isFavorite" (change)="onFavoriteChanged($event)"></favorite>
 <bootstrap-panel>
-    <div class="heading">Heading</div>
+    <ng-container class="heading">Heading</ng-container>
     <div class="body">
 
         <h2>Body</h2>
