--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -9,4 +9,7 @@
         <p>Some content here..</p>
     </div>
 </bootstrap-panel>
-<like></like>
+<like
+    [likesCount]="tweet.likesCount"
+    [isActive]="tweet.isLiked"
+></like>
