--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -13,3 +13,12 @@
     [likesCount]="tweet.likesCount"
     [isActive]="tweet.isLiked"
 ></like>
+<div *ngIf="courses.length > 0; then coursesList else noCourses">
+    List of courses
+</div>
+<ng-template #coursesList>
+    List of courses
+</ng-template>
+<ng-template #noCourses>
+    No courses yet
+</ng-template>
