--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -30,10 +30,11 @@
 </div>
 
 <ul class="nav nav-pills">
-    <li active="active"><a href="">Map View</a></li>
-    <li><a href="">List View</a></li>
+    <li [class.active]="viewMode == 'map'"><a (click)="viewMode = 'map'">Map View</a></li>
+    <li [class.active]="viewMode == 'list'"><a (click)="viewMode = 'list'">List View</a></li>
 </ul>
 <div [ngSwitch]="viewMode">
-    <div>Map View Content</div>
-    <div>List View Content</div>
+    <div *ngSwitchCase="'map'">Map View Content</div>
+    <div *ngSwitchCase="'list'">List View Content</div>
+    <div *ngSwitchDefault>Otherwise</div>
 </div>
